# sbv2_dataset_editor

./: LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt  setting.yaml  shortcut_gui.py
scr/: yaml_sl.py
